achev des filtres pour la recherche